--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="assets/img/WhatsApp Image 2023-09-27 at 7.41.01 PM.jpeg" class="img-fluid" alt="..."/>
+                          <img src="assets/img/(1).jpg" class="img-fluid" alt="..."/>
                         </div>
                         <div class="carousel-item">
-                          <img src="assets/img/WhatsApp Image 2023-09-27 at 7.41.01 PM (1).jpeg" class="img-fluid" alt="..."/>
+                          <img src="assets/img/(2).jpg" class="img-fluid" alt="..."/>
                         </div>
                       </div>
                   </div>
